@@ -57,6 +57,7 @@ class JavaScriptMacrosHelperTest < Test::Unit::TestCase
   def test_text_field_with_auto_complete
     assert_match %(<style type="text/css">),
       text_field_with_auto_complete(:message, :recipient)
+
     assert_dom_equal %(<input id=\"message_recipient\" name=\"message[recipient]\" size=\"30\" type=\"text\" /><div class=\"auto_complete\" id=\"message_recipient_auto_complete\"></div><script type=\"text/javascript\">\n//<![CDATA[\nvar message_recipient_auto_completer = new Ajax.Autocompleter('message_recipient', 'message_recipient_auto_complete', 'http://www.example.com/auto_complete_for_message_recipient', {})\n//]]>\n</script>),
       text_field_with_auto_complete(:message, :recipient, {}, :skip_style => true)
   end
